--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-08  Adam Roben  <aroben@apple.com>
+
+        Hopeful Windows build fix
+
+        * rendering/RenderObject.cpp: Touch this file to make it recompile.
+
 2007-11-08  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Darin.
