Stop using KJS inside of MathExtras.h
         Reviewed by Darin.

         * wtf/MathExtras.h: Removed an unused header, and a now-unused
         forward-declaration.
         (wtf_atan2): Use std::numeric_limits intead of KJS.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27614 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-08  Adam Roben  <aroben@apple.com>
+
+        Stop using KJS inside of MathExtras.h
+
+        Reviewed by Darin.
+
+        * wtf/MathExtras.h: Removed an unused header, and a now-unused
+        forward-declaration.
+        (wtf_atan2): Use std::numeric_limits intead of KJS.
+
 2007-11-08  Sam Weinig  <sam@webkit.org>
 
         Windows build fix.
