2007-11-08 Eric Seidel <eric@webkit.org>
        Reviewed by darin.

        Add ExpressionNode subclass of Node, use it.

        * kjs/grammar.y:
        * kjs/nodes.cpp:
        (KJS::ForInNode::ForInNode):
        * kjs/nodes.h:
        (KJS::ExpressionNode::):
        (KJS::NullNode::):
        (KJS::NullNode::precedence):
        (KJS::BooleanNode::):
        (KJS::BooleanNode::precedence):
        (KJS::RegExpNode::):
        (KJS::RegExpNode::precedence):
        (KJS::ThisNode::):
        (KJS::ThisNode::precedence):
        (KJS::ResolveNode::):
        (KJS::ElementNode::):
        (KJS::ArrayNode::):
        (KJS::PropertyNode::):
        (KJS::PropertyNode::precedence):
        (KJS::PropertyNode::name):
        (KJS::PropertyListNode::):
        (KJS::ObjectLiteralNode::):
        (KJS::ObjectLiteralNode::precedence):
        (KJS::BracketAccessorNode::):
        (KJS::DotAccessorNode::):
        (KJS::DotAccessorNode::precedence):
        (KJS::ArgumentListNode::):
        (KJS::ArgumentsNode::):
        (KJS::NewExprNode::):
        (KJS::NewExprNode::precedence):
        (KJS::FunctionCallValueNode::):
        (KJS::FunctionCallValueNode::precedence):
        (KJS::FunctionCallResolveNode::):
        (KJS::FunctionCallBracketNode::):
        (KJS::FunctionCallBracketNode::precedence):
        (KJS::FunctionCallDotNode::):
        (KJS::FunctionCallDotNode::precedence):
        (KJS::PrePostResolveNode::):
        (KJS::PostfixBracketNode::):
        (KJS::PostfixBracketNode::precedence):
        (KJS::PostIncBracketNode::):
        (KJS::PostIncBracketNode::isIncrement):
        (KJS::PostDecBracketNode::):
        (KJS::PostDecBracketNode::isIncrement):
        (KJS::PostfixDotNode::):
        (KJS::PostfixDotNode::precedence):
        (KJS::PostIncDotNode::):
        (KJS::PostIncDotNode::isIncrement):
        (KJS::PostDecDotNode::):
        (KJS::PostDecDotNode::isIncrement):
        (KJS::PostfixErrorNode::):
        (KJS::PostfixErrorNode::pre

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,164 @@
+2007-11-08  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by darin.
+
+        Add ExpressionNode subclass of Node, use it.
+
+        * kjs/grammar.y:
+        * kjs/nodes.cpp:
+        (KJS::ForInNode::ForInNode):
+        * kjs/nodes.h:
+        (KJS::ExpressionNode::):
+        (KJS::NullNode::):
+        (KJS::NullNode::precedence):
+        (KJS::BooleanNode::):
+        (KJS::BooleanNode::precedence):
+        (KJS::RegExpNode::):
+        (KJS::RegExpNode::precedence):
+        (KJS::ThisNode::):
+        (KJS::ThisNode::precedence):
+        (KJS::ResolveNode::):
+        (KJS::ElementNode::):
+        (KJS::ArrayNode::):
+        (KJS::PropertyNode::):
+        (KJS::PropertyNode::precedence):
+        (KJS::PropertyNode::name):
+        (KJS::PropertyListNode::):
+        (KJS::ObjectLiteralNode::):
+        (KJS::ObjectLiteralNode::precedence):
+        (KJS::BracketAccessorNode::):
+        (KJS::DotAccessorNode::):
+        (KJS::DotAccessorNode::precedence):
+        (KJS::ArgumentListNode::):
+        (KJS::ArgumentsNode::):
+        (KJS::NewExprNode::):
+        (KJS::NewExprNode::precedence):
+        (KJS::FunctionCallValueNode::):
+        (KJS::FunctionCallValueNode::precedence):
+        (KJS::FunctionCallResolveNode::):
+        (KJS::FunctionCallBracketNode::):
+        (KJS::FunctionCallBracketNode::precedence):
+        (KJS::FunctionCallDotNode::):
+        (KJS::FunctionCallDotNode::precedence):
+        (KJS::PrePostResolveNode::):
+        (KJS::PostfixBracketNode::):
+        (KJS::PostfixBracketNode::precedence):
+        (KJS::PostIncBracketNode::):
+        (KJS::PostIncBracketNode::isIncrement):
+        (KJS::PostDecBracketNode::):
+        (KJS::PostDecBracketNode::isIncrement):
+        (KJS::PostfixDotNode::):
+        (KJS::PostfixDotNode::precedence):
+        (KJS::PostIncDotNode::):
+        (KJS::PostIncDotNode::isIncrement):
+        (KJS::PostDecDotNode::):
+        (KJS::PostDecDotNode::isIncrement):
+        (KJS::PostfixErrorNode::):
+        (KJS::PostfixErrorNode::precedence):
+        (KJS::DeleteResolveNode::):
+        (KJS::DeleteBracketNode::):
+        (KJS::DeleteBracketNode::precedence):
+        (KJS::DeleteDotNode::):
+        (KJS::DeleteDotNode::precedence):
+        (KJS::DeleteValueNode::):
+        (KJS::DeleteValueNode::precedence):
+        (KJS::VoidNode::):
+        (KJS::VoidNode::precedence):
+        (KJS::TypeOfResolveNode::):
+        (KJS::TypeOfValueNode::):
+        (KJS::PrefixBracketNode::):
+        (KJS::PrefixBracketNode::precedence):
+        (KJS::PreIncBracketNode::):
+        (KJS::PreIncBracketNode::isIncrement):
+        (KJS::PreDecBracketNode::):
+        (KJS::PreDecBracketNode::isIncrement):
+        (KJS::PrefixDotNode::):
+        (KJS::PrefixDotNode::precedence):
+        (KJS::PreIncDotNode::):
+        (KJS::PreIncDotNode::isIncrement):
+        (KJS::PreDecDotNode::):
+        (KJS::PreDecDotNode::isIncrement):
+        (KJS::PrefixErrorNode::):
+        (KJS::PrefixErrorNode::precedence):
+        (KJS::UnaryPlusNode::):
+        (KJS::UnaryPlusNode::precedence):
+        (KJS::NegateNode::):
+        (KJS::NegateNode::precedence):
+        (KJS::BitwiseNotNode::):
+        (KJS::BitwiseNotNode::precedence):
+        (KJS::LogicalNotNode::):
+        (KJS::LogicalNotNode::precedence):
+        (KJS::AddNode::):
+        (KJS::AddNode::precedence):
+        (KJS::LeftShiftNode::):
+        (KJS::LeftShiftNode::precedence):
+        (KJS::RightShiftNode::):
+        (KJS::RightShiftNode::precedence):
+        (KJS::UnsignedRightShiftNode::):
+        (KJS::UnsignedRightShiftNode::precedence):
+        (KJS::LessNode::):
+        (KJS::LessNode::precedence):
+        (KJS::GreaterNode::):
+        (KJS::GreaterNode::precedence):
+        (KJS::LessEqNode::):
+        (KJS::LessEqNode::precedence):
+        (KJS::GreaterEqNode::):
+        (KJS::GreaterEqNode::precedence):
+        (KJS::InstanceOfNode::):
+        (KJS::InstanceOfNode::precedence):
+        (KJS::InNode::):
+        (KJS::InNode::precedence):
+        (KJS::EqualNode::):
+        (KJS::EqualNode::precedence):
+        (KJS::NotEqualNode::):
+        (KJS::NotEqualNode::precedence):
+        (KJS::StrictEqualNode::):
+        (KJS::StrictEqualNode::precedence):
+        (KJS::NotStrictEqualNode::):
+        (KJS::NotStrictEqualNode::precedence):
+        (KJS::BitAndNode::):
+        (KJS::BitAndNode::precedence):
+        (KJS::BitOrNode::):
+        (KJS::BitOrNode::precedence):
+        (KJS::BitXOrNode::):
+        (KJS::BitXOrNode::precedence):
+        (KJS::LogicalAndNode::):
+        (KJS::LogicalAndNode::precedence):
+        (KJS::LogicalOrNode::):
+        (KJS::LogicalOrNode::precedence):
+        (KJS::ConditionalNode::):
+        (KJS::ConditionalNode::precedence):
+        (KJS::ReadModifyResolveNode::):
+        (KJS::ReadModifyResolveNode::precedence):
+        (KJS::AssignResolveNode::):
+        (KJS::AssignResolveNode::precedence):
+        (KJS::ReadModifyBracketNode::):
+        (KJS::ReadModifyBracketNode::precedence):
+        (KJS::AssignBracketNode::):
+        (KJS::AssignBracketNode::precedence):
+        (KJS::AssignDotNode::):
+        (KJS::AssignDotNode::precedence):
+        (KJS::ReadModifyDotNode::):
+        (KJS::ReadModifyDotNode::precedence):
+        (KJS::AssignErrorNode::):
+        (KJS::AssignErrorNode::precedence):
+        (KJS::CommaNode::):
+        (KJS::CommaNode::precedence):
+        (KJS::AssignExprNode::):
+        (KJS::AssignExprNode::precedence):
+        (KJS::ExprStatementNode::):
+        (KJS::IfNode::):
+        (KJS::DoWhileNode::):
+        (KJS::WhileNode::):
+        (KJS::ReturnNode::):
+        (KJS::WithNode::):
+        (KJS::ThrowNode::):
+        (KJS::ParameterNode::):
+        (KJS::CaseClauseNode::):
+        (KJS::CaseClauseNode::precedence):
+        (KJS::ClauseListNode::):
+        (KJS::SwitchNode::):
+
 2007-11-08  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Sam.
