- roll out accidentally-checked in changes
        * kjs/nodes.cpp: Back to previous version.
        * kjs/nodes.h: Ditto.
        * kjs/grammar.y: Ditto.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27636 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -4,6 +4,7 @@
 
         * kjs/nodes.cpp: Back to previous version.
         * kjs/nodes.h: Ditto.
+        * kjs/grammar.y: Ditto.
 
 2007-11-08  Darin Adler  <darin@apple.com>
 
