Renamed QWebPage::NumWebActions to QWebPage::WebActionCount (for consistency) and fixed its value.
Signed-off-by: Holger


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27643 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-09  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Holger.
+
+        Renamed QWebPage::NumWebActions to QWebPage::WebActionCount (for consistency) and fixed its value.
+        
+
+        * Api/qwebpage.h:
+        * Api/qwebpage_p.h:
+
 2007-11-08  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Sam.
